# KVDiagnosis

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/audits/: pyramidkv_adapter_audit.json  slot_ecov_execution_audit.json
data/context_demand/: ruler8k_context_demand_dataset.csv  summary.json  validation_report.json
data/examples/: selected_failures_sample.jsonl
data/metadata/: artifact_manifest.json
data/summaries/: completed_failure_summary.csv  completed_failure_summary.json  failure_signature_totals.json  failure_signatures_by_dataset_method_budget.csv  longbench_v2_proxy90_summary_by_family_budget.csv  longbench_v2_proxy90_summary_by_task_method_budget.csv  matched_method_pair_summary.csv  qasper_hotpot_failure_profiles.csv  qasper_hotpot_summary_by_family_budget.csv  qasper_hotpot_summary_by_task_method_budget.csv  ruler16k_summary_by_family_budget.csv  ruler16k_summary_by_task_method_budget.csv  ruler8k_summary_by_family_budget.csv  slot_ecov_summary.csv  (+2 more)
docs/: data_format.md  github_release.md  metrics.md  reproduction.md
examples/: read_selected_failures.py
requirements/: requirements_current_experiment.txt
scripts/: audit_pyramidkv_adapter.py  build_full_population_ledger.py  build_release_artifacts.py  check_release.py  export_selected_failures.py  migrate_coverage_applicability.py  push_to_github.sh  regenerate_paper_artifacts.py
tests/: test_dataset_integrity.py  test_pyramidkv_tracker.py  test_scoring.py  test_slot_retention.py
(+14 files in other folders)
